--- a/ISFramework.UI/bower.json
+++ b/ISFramework.UI/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "3.3.7",
-    "angularjs": "1.6.4"
+    "angularjs": "1.6.4",
+    "ui-router": "0.4.2"
   }
 }
