--- a/ISFramework.UI/bower.json
+++ b/ISFramework.UI/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "3.3.7",
     "angularjs": "1.6.4",
-    "ui-router": "0.4.2"
+    "ui-router": "0.4.2",
+    "Font-Awesome": "4.7.0"
   }
 }
