--- a/ISFramework.UI/package.json
+++ b/ISFramework.UI/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.6.4",
     "angular-mocks": "^1.6.4",
     "angular-ui-router": "^0.4.2",
+    "express": "^4.15.2",
     "jasmine-core": "^2.5.2",
     "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
